--- a/index.ipynb
+++ b/index.ipynb
@@ -70,9 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'January'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_month # \"January\"\n",
     "travel_month = 'January'\n",
@@ -97,12 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "number_of_weeks # 3\n",
-    "number_of_weeks = 3"
+    "number_of_weeks = 3\n",
+    "number"
    ]
   },
   {
